<resources>
    <string name="app_name">成都双创时代科技有限公司</string>
    <string name="language">语言：</string>
    <string name="chinese">中文</string>
    <string name="userName">姓名：</string>
    <string name="userSex">姓别：</string>
    <string name="userImg">头像：</string>
    <string name="Man">男</string>
    <string name="Women">女</string>
    <string name="Select">选择图片</string>
    <string name="camera">拍照</string>
    <string name="Save">保存</string>
    <string name="Back">返回</string>
    <string name="Set">设置</string>
    <string name="mimi">咪咪</string>
    <string name="hide">隐藏手机信息</string>
    <string name="open">打开手机信息</string>
    <string name="menu">菜单</string>
    <string name="hello">Hi,请对我讲话,欢迎提建议,我的邮箱是 songbinsg@gmail.com</string>


</resources>
