<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
<include
  layout="@layout/set_head"/>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="30dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:layout_centerVertical="true"
        />
    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/chinese"
        android:textSize="16sp"
        android:textColor="@color/pray"
        />
  </RelativeLayout>
<ImageView
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#abd"
    />
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/userName"
        />
    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:textSize="16sp"
        android:hint="请输入姓名"
       android:background="@null"
        android:textColor="@color/pray"
        />
  </RelativeLayout>
  <ImageView
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="#abd"
      />
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="30dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userSex"
        />
<RadioGroup
    android:layout_centerInParent="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
  <RadioButton
      android:id="@+id/man"
      android:text="@string/Man"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:checked="true"
      />
  <RadioButton
      android:id="@+id/woman"
      android:text="@string/Women"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />

</RadioGroup>

  </RelativeLayout>
  <ImageView
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="#abd"
      />
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="5dp"
      android:paddingTop="5dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userImg"
        android:layout_centerVertical="true"
        />
   <Button
       android:id="@+id/select"
       android:layout_centerInParent="true"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/Select"
       android:background="#dbdbdb"
       />
    <ImageView
        android:id="@+id/head_img"
        android:layout_toRightOf="@id/select"
        android:layout_marginLeft="5dp"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@mipmap/head"
        />
    <Button
        android:id="@+id/camera"
        android:layout_toRightOf="@id/head_img"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:background="@null"
        />
  </RelativeLayout>
  <ImageView
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="#abd"
      />
  <Button
      android:id="@+id/save"
      android:layout_marginTop="10dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/Save"
      android:layout_gravity="center_horizontal"
      android:background="@drawable/mcorner"
      />
</LinearLayout>